# MacroPadTouch

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  Config.h  MacroPadTouch.c  MacroPadTouch.cpp  Utils.c  Utils.cpp  Utils.h
main/display/: DisplayColors.h  DisplayRefreshModes.h
main/display/ePaper/: WaveShare213.cpp  WaveShare213.h  WaveShare29.cpp  WaveShare29.h
main/fonts/: fonts.h
main/graphics/: ImageData.cpp  ImageData.h
main/paint/: GUI_Paint.cpp  GUI_Paint.h
main/touch/: GT1151.c  GT1151.cpp  GT1151.h  ICNT86X.cpp  ICNT86X.h  TouchDriver.cpp  TouchDriver.h  TouchPoint.cpp  TouchPoint.h
pcb/v0.5/: MacroPadTouch-ESP32.eprj
